feat(profiles): добавить получение данных текущего профиля
